styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

body {
    font-family: Roboto;
    margin: 0px;
    padding:0px;
}

.header, .hero ,.footer {
    background-color: #1f2937;
    width: 100%;
}

.header-logo {
    font-size: 24px;
    color: #f9faf8;
    font-weight:800;
}

.header-logo {
    padding-left: 100px;
}

.header-links {
    padding-right: 100px;
}


ul {
    list-style: none;
    padding-left: 0px;
}

a {
    text-decoration: none;
    color: #e5e7eb;
}

.hero {
    padding: 100px 0px;
}

.company-title {
    font-size: 48px;
    font-weight: 800;
    color: #f9faf8;
}

.company-subtitle {
    font-size: 18px;
    color: #e5e7eb;
}

.intro {
    padding-left: 100px;
}

.intro .company-subtitle {
    padding: 10px 0px;
}

.intro button {
    border: 0px;
}

.hero img {
    max-width: 300px;
    height: auto;
    padding-right: 100px;
}

.features {
    padding-top: 40px;
    padding-bottom: 80px;
}

.random-information {
    font-size: 36px;
    font-weight:800;
    color:#1f2937;
}

.card {
    max-width: 200px;
    text-align: center;
}

.card img {
    border: 2px solid #3882f6 ;
    border-radius: 15px;
}

.quote {
    background-color: #e5e7eb;
    padding: 100px 300px;
}

.quote .text {
    font-size: 36px;
    font-weight:300;
    font-style: italic;
    color: #1f2937;
    text-align: left;
}

.quote .author {
    color: #1f2937;
    font-weight: 800;
    font-size: 18px;
    text-align: right;
    width: 100%;
}

.subscribe {
    background-color: #3882f6;
    max-width: 75%;
    padding: 40px 60px;
    margin: 60px 0px;
    border-radius: 10px;
}

.subscribe .sub-header {
    font-size: 24px;
    color: #f9faf8;
    font-weight: 600;
}

.subscribe .sub-text {
    color: #e5e7eb;
}

.subscribe button {
    border: 2px solid #f9faf8;
}

button {
    background-color: #3882f6;
    color: #f9faf8;
    font-weight: bold;
    padding: 10px 40px;
    border-radius: 10px;
}

.footer {
    color: #f9faf8;
    padding: 30px 0px;
}

/* Flex */

body {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header ul {
    display: flex;
    gap: 16px;
}

.hero {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
}

.features {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 40px;
}

.container {
    display: flex;
    gap: 40px;
} 

.card {
    display: flex;
    flex-direction: column;
    flex: 1;
    justify-content: baseline;
    gap: 10px;
}

.quote {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex: 1;
    gap: 10px;
}

.subscribe {
    display: flex;
    justify-content:space-evenly;
    gap: 80px;
}

.footer {
    display: flex;
    align-items: center;
    justify-content: center;
}

